chore: update dependencies and add new packages
- Added @langchain/community version 1.1.4
- Updated dotenv from version 17.2.3 to 16.6.1
- Added pdf-parse version 1.1.1

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@langchain/community": "^1.1.4",
     "@langchain/core": "^1.1.15",
     "@langchain/google-genai": "^2.1.10",
     "@nestjs/common": "^11.0.1",
@@ -28,9 +29,10 @@
     "@nestjs/platform-express": "^11.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
-    "dotenv": "^17.2.3",
+    "dotenv": "^16.6.1",
     "joi": "^18.0.2",
     "langchain": "^1.2.10",
+    "pdf-parse": "^1.1.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
