--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@langchain/classic": "^1.0.9",
     "@langchain/community": "^1.1.4",
     "@langchain/core": "^1.1.15",
+    "@langchain/google-genai": "^2.1.10",
     "@langchain/openai": "^1.2.2",
     "@langchain/textsplitters": "^1.0.1",
     "@nestjs/common": "^11.0.1",
