--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,7 @@
-OPENAI_API_KEY=
+GOOGLE_API_KEY=
 PORT=
+GOOGLE_MODEL_NAME=
+OPENAI_API_KEY=
+OPENAI_MODEL_NAME=
+PINECONE_API_KEY=
+PINECONE_INDEX=
