--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@langchain/core": "^1.1.15",
     "@langchain/google-genai": "^2.1.10",
     "@langchain/openai": "^1.2.2",
+    "@langchain/pinecone": "^1.0.1",
     "@langchain/textsplitters": "^1.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
+    "@pinecone-database/pinecone": "^6.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
     "dotenv": "^16.6.1",
